--- a/src/styles/AnimatedCursor.css
+++ b/src/styles/AnimatedCursor.css
@@ -10,7 +10,7 @@ body {
   position: relative;
   height: 100vh;
   width: 100vw;
-  background: #2128bd;
+  background: var(--highlight-color);
   overflow: hidden;
 }
 
@@ -21,21 +21,21 @@ body {
 }
 
 .shape.shape-1 {
-  background: #005ffe;
+  background: var(--primary-color);
   width: 300px;
   height: 300px;
   margin: -150px 0 0 -150px;
 }
 
 .shape.shape-2 {
-  background: #ffe5e3;
+  background: var(--second-color);
   width: 200px;
   height: 200px;
   margin: -100px 0 0 -100px;
 }
 
 .shape.shape-3 {
-  background: #ffcc57;
+  background: var(--third-color);
   width: 120px;
   height: 120px;
   margin: -60px 0 0 -60px;
