--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -33,6 +33,7 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
+  /* background-color: var(--background-color); */
 }
 
 .justify-content-ctr {
@@ -57,6 +58,3 @@
 }
 
 /* cursor */
-* {
-
-}
